--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .mtj.tmp/
 
 # Package Files #
+target/
 *.jar
 *.war
 *.nar
@@ -21,3 +22,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# PDF Files
+*.pdf
+*.PDF
