--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,15 +19,15 @@ jobs:
         with:
           java-version: 1.8
           server-id: ossrh
-          server-username: $env.OSSRH_USERNAME
-          server-password: $env.OSSRH_PASSWORD
-          gpg-private-key: $env.OSSRH_GPG_PRIVKEY
-          gpg-passphrase: $env.OSSRH_GPG_PASS
+          server-username: env.OSSRH_USERNAME
+          server-password: env.OSSRH_PASSWORD
+          gpg-private-key: env.OSSRH_GPG_PRIVKEY
+          gpg-passphrase: env.OSSRH_GPG_PASS
 
       - name: Configure Git user
         run: |
-          git config user.email $env.USER_EMAIL
-          git config user.name $env.USER_NAME
+          git config user.email env.USER_EMAIL
+          git config user.name env.USER_NAME
 
       - name: Delivery Snapshot
         run: mvn -B clean deploy -Pci-cd
