--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Maven Central Repository
+      - name: Set up OSSRH Repository
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
