--- a/.github/workflows/ossrh-release.yml
+++ b/.github/workflows/ossrh-release.yml
@@ -12,15 +12,13 @@ jobs:
         with:
           java-version: 1.8
           server-id: ossrh
-          server-username: OSSRH_USERNAME
-          server-password: OSSRH_PASSWORD
-          gpg-private-key: OSSRH_GPG_PRIVKEY
-          gpg-passphrase: OSSRH_GPG_PASS
-        env:
-          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          OSSRH_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-          OSSRH_GPG_PASS: ${{ secrets.MAVEN_GPG_PASSWORD }}
-          OSSRH_GPG_PRIVKEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          server-username: ${{ secrets.OSSRH_USERNAME }}
+          server-password: ${{ secrets.OSSRH_TOKEN }}
+          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSWORD }}
+
+      - name: Delivery Snapshot
+        run: mvn -B clean deploy -Pci-cd
 
       - name: Configure Git user
         run: |
@@ -29,9 +27,6 @@ jobs:
         env:
           USER_EMAIL: silva.gp.miguel@gmail.com
           USER_NAME: silvagpmiguel
-          
-      - name: Delivery Snapshot
-        run: mvn -B clean deploy -Pci-cd
 
       - name: Prepare Release Candidates
         run: mvn -B release:clean release:prepare -Pci-cd
