--- a/.github/workflows/ossrh-rollback.yml
+++ b/.github/workflows/ossrh-rollback.yml
@@ -12,16 +12,18 @@ jobs:
         with:
           java-version: 1.8
           server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-          gpg-private-key: MAVEN_GPG_PRIVATE_KEY
-          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+          server-username: ${{ secrets.OSSRH_USERNAME }}
+          server-password: ${{ secrets.OSSRH_TOKEN }}
+          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSWORD }}
 
       - name: Configure Git user
         run: |
           git config user.email $USER_EMAIL
           git config user.name $USER_NAME
+        env:
+          USER_EMAIL: silva.gp.miguel@gmail.com
+          USER_NAME: silvagpmiguel
 
       - name: Rollback
         run: mvn release:rollback
-      
