--- a/.github/workflows/ossrh-release.yml
+++ b/.github/workflows/ossrh-release.yml
@@ -1,11 +1,14 @@
 name: Manual Release to OSSRH
+
 on:
   workflow_dispatch:
+
 env:
   MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
   MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
   MAVEN_GPG_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
   MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSWORD }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -17,10 +20,10 @@ jobs:
         with:
           java-version: 1.8
           server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-          gpg-private-key: MAVEN_GPG_KEY
-          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+          server-username: env.MAVEN_USERNAME
+          server-password: env.MAVEN_PASSWORD
+          gpg-private-key: env.MAVEN_GPG_KEY
+          gpg-passphrase: env.MAVEN_GPG_PASSPHRASE
 
       - name: Delivery Snapshot
         run: mvn -B clean deploy -Pci-cd
