--- a/.github/workflows/ossrh-release.yml
+++ b/.github/workflows/ossrh-release.yml
@@ -20,10 +20,10 @@ jobs:
         with:
           java-version: 1.8
           server-id: ossrh
-          server-username: env.MAVEN_USERNAME
-          server-password: env.MAVEN_PASSWORD
-          gpg-private-key: env.MAVEN_GPG_KEY
-          gpg-passphrase: env.MAVEN_GPG_PASSPHRASE
+          server-username: ${{ env.MAVEN_USERNAME }}
+          server-password: ${{ env.MAVEN_PASSWORD }}
+          gpg-private-key: ${{ env.MAVEN_GPG_KEY }}
+          gpg-passphrase: ${{ env.MAVEN_GPG_PASSPHRASE }}
 
       - name: Delivery Snapshot
         run: mvn -B clean deploy -Pci-cd
